started to refactor and delete useless code